@@ -26,11 +26,10 @@ public class PO_NavView extends PO_View {
         //Tiene que haber un sólo elemento.
         Assertions.assertEquals(1, elements.size());
         //Ahora lo clickamos
-        elements.get(0).click();
+        elements.getFirst().click();
         //Esperamos a que sea visible un elemento concreto
         elements = SeleniumUtils.waitLoadElementsBy(driver, criterio, targetText, getTimeout());
-        //Tiene que haber un sólo elemento.
-        Assertions.assertEquals(1, elements.size());
+        Assertions.assertTrue(!elements.isEmpty() && elements.size() < 3);
     }
 
     /**
